--- a/app/templates/app/tobot.html
+++ b/app/templates/app/tobot.html
@@ -6,8 +6,7 @@
                     "summary": "{{ s.summary }}", 
                     "description": "{{ s.description }}",
                     "start_time": "{{ s.start_time|date:"G:i" }}",
-                    "end_time": "{{ s.end_time|date:"G:i" }}",
-                    "room": "{{ s.room }}"
+                    "end_time": "{{ s.end_time|date:"G:i" }}"
                 }
                 {% if s != last %}
                     ,
