画像修正版

--- a/app/templates/app/mycalendar.html
+++ b/app/templates/app/mycalendar.html
@@ -12,7 +12,7 @@
     <title>カレンダー</title>
 </head>
 <body>
-<img src="images\tutorial.png">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial.png">
 <div class="container" mt-3>
 {% block content %}
     <div class="row">
