--- a/app/templates/app/mycalendar.html
+++ b/app/templates/app/mycalendar.html
@@ -12,7 +12,8 @@
     <title>カレンダー</title>
 </head>
 <body>
-<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial.png">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_1.png" style = "display: block; margin: auto;">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_2.png" style = "display: block; margin: auto;">
 <div class="container" mt-3>
 {% block content %}
     <div class="row">
