--- a/app/templates/app/mycalendar.html
+++ b/app/templates/app/mycalendar.html
@@ -69,7 +69,7 @@
         });
     </script>
 {% endblock %}
-<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_1.png" style = "display: block; margin: auto;">
-<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_2.png" style = "display: block; margin: auto;">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_1.png" style = "display: block; margin: auto; width: 800px;">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_2.png" style = "display: block; margin: auto; width: 800px;">
 </body>
 </html>
