container, img width set to 1000px

--- a/app/templates/app/mycalendar.html
+++ b/app/templates/app/mycalendar.html
@@ -12,7 +12,7 @@
     <title>カレンダー</title>
 </head>
 <body>
-<div class="container" mt-3>
+<div class="container" style="width: 1000px" mt-3>
 {% block content %}
     <div class="row">
         <div class="col-md-3">
@@ -69,7 +69,7 @@
         });
     </script>
 {% endblock %}
-<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_1.png" style = "display: block; margin: auto; width: 800px;">
-<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_2.png" style = "display: block; margin: auto; width: 800px;">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_1.png" style = "display: block; margin: auto; width: 1000px;">
+<img src="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_2.png" style = "display: block; margin: auto; width: 1000px;">
 </body>
 </html>
