カレンダーに勉強部屋情報が表示されていなかった問題を修正 予定が登録されていない日付のtobotURLにアクセスするとエラーが発生していた問題を修正

--- a/app/templates/app/includes/week.html
+++ b/app/templates/app/includes/week.html
@@ -26,6 +26,7 @@
                     {{ s.start_time|date:"G:i" }} - {{ s.end_time|date:"G:i" }}<br>
                     {{ s.summary }}<br>
                     {{ s.description}}<br>
+                    勉強部屋{{ s.room }}<br>
                     <a href="{% url 'delete' s.id %}">削除</a><br><br>
                 {% endfor %}
             </td>
