--- a/app/templates/app/includes/week.html
+++ b/app/templates/app/includes/week.html
@@ -6,7 +6,7 @@
     <tbody>
     <tr>
         {% for day in week_days %}
-            {% if now == day %}
+            {% if date == day %}
                 <td class="table-success">
                     {% else %}
                 <td>
