カレンダーページの帯に、メインページに戻るリンクを追加／一時的(恒久的?)に、メインページへアクセスにログイン不要化

--- a/app/templates/app/mycalendar.html
+++ b/app/templates/app/mycalendar.html
@@ -21,10 +21,10 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">ヘルプ一覧</a>
+        <a class="navbar-brand" href={% url 'index' %}>シケタイへ戻る</a>
+        <a class="navbar-brand">ヘルプ一覧</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
               <a class="nav-link" href="https://cdn.discordapp.com/attachments/864711400655945759/920547797147713537/Screen_Shot_2021-12-15_at_14.27.12.png" data-lightbox="group">主催者の方へ</a>
             </li>
             <li class="nav-item">
