--- a/app/templates/app/mycalendar.html
+++ b/app/templates/app/mycalendar.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <title>カレンダー</title>
     
@@ -17,22 +19,38 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand">カレンダー</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href={% url 'index' %}>シケタイへ戻る</a>
-        <a class="navbar-brand">ヘルプ一覧</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-              <a class="nav-link" href="https://cdn.discordapp.com/attachments/864711400655945759/920547797147713537/Screen_Shot_2021-12-15_at_14.27.12.png" data-lightbox="group">主催者の方へ</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href={% url 'index' %}>シケタイへ戻る</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://cdn.discordapp.com/attachments/864711400655945759/920547796791205958/Screen_Shot_2021-12-15_at_14.26.58.png" data-lightbox="group">参加者の方へ</a>
+              <a class="nav-link" href="https://discord.gg/UhVZwKys2H">Discord</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                ヘルプ
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="https://cdn.discordapp.com/attachments/864711400655945759/920547797147713537/Screen_Shot_2021-12-15_at_14.27.12.png" data-lightbox="group">主催者の方へ</a></li>
+                <li><a class="dropdown-item" href="https://cdn.discordapp.com/attachments/864711400655945759/920547796791205958/Screen_Shot_2021-12-15_at_14.26.58.png" data-lightbox="group">参加者の方へ</a></li>
+              </ul>
+            </li>            
+          </ul>
+          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href={% url 'search' %}>検索</a>
             </li>
           </ul>
         </div>
-      </nav>
+      </div>
+</nav>
 
 <div class="container mt-3">
 {% block content %}
@@ -51,9 +69,11 @@
                             {{ field.errors }}
                         </div>
                     </div>
+                </br>
                 {% endfor %}
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary btn-block">送信</button>
+            <br></br>
             </form>
         </div>
         <div class="col-md-9">
