--- a/app/templates/app/includes/week.html
+++ b/app/templates/app/includes/week.html
@@ -2,35 +2,44 @@
 {{ week_first | date:"Y年m月d日" }}〜{{ week_last | date:"Y年m月d日" }}
 <a href="{% url 'mycalendar' week_next.year week_next.month  week_next.day %}">次週</a>
 
-<table class="table" style="table-layout: fixed;">
+<table class="table table-bordered", style="table-layout: fixed;">
+    <thead>
+        <tr>
+            {% for day in week_days %}
+                {% if date == day %}
+                    <th scope="col" class="table-success">
+                        {% else %}
+                    <th scope="col">
+                {% endif %}
+                {% if week_first.month != day.month %}
+                    {{ day | date:"m/d" }}
+                {% else %}
+                    {{ day.day }}
+                {% endif %}
+                </th>
+            {% endfor %}
+        </tr>
+    </thead>        
     <tbody>
-    <tr>
-        {% for day in week_days %}
-            {% if date == day %}
-                <td class="table-success">
-                    {% else %}
+        <tr>
+            {% for schedules in week_day_schedules.values %}
                 <td>
-            {% endif %}
-        {% if week_first.month != day.month %}
-            {{ day | date:"m/d" }}
-        {% else %}
-            {{ day.day }}
-        {% endif %}
-        </td>
-        {% endfor %}
-    </tr>
-    <tr>
-        {% for schedules in week_day_schedules.values %}
-            <td>
-                {% for s in schedules %}
-                    {{ s.start_time|date:"G:i" }} - {{ s.end_time|date:"G:i" }}<br>
-                    {{ s.summary }}<br>
-                    {{ s.description}}<br>
-                    勉強部屋{{ s.room }}<br>
-                    <a href="{% url 'delete' s.id %}">削除</a><br><br>
-                {% endfor %}
-            </td>
-        {% endfor %}
-    </tr>
+                    {% for s in schedules|dictsort:"start_time" %}                    
+                        {{ s.start_time|date:"G:i" }} - {{ s.end_time|date:"G:i" }}<br>
+                        {{ s.summary }}<br>
+                        {% if s.description%}
+                            {{ s.description}}<br>
+                        {% endif %}
+                        勉強部屋{{ s.room }}<br>
+                        {{ s.creator }}<br>
+                        <a href="{% url 'join' s.id %}">参加する</a><br>
+                        <a href="{% url 'delete' s.id %}">削除</a><br>
+                        {% if not forloop.last %}
+                            <hr/>
+                        {% endif %}
+                    {% endfor %}
+                </td>   
+            {% endfor %}
+        </tr>
     </tbody>
 </table>
