--- a/app/templates/app/schedule_list.html
+++ b/app/templates/app/schedule_list.html
@@ -1,73 +1,62 @@
-<!DOCTYPE html>
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>全スケジュールリスト</title>
-</head>
-<style> 
-  .sort.desc:after {
-    content: "▼";
-  }
- 
-  .sort.asc:after {
-    content: "▲";
-  }
-</style>
-{% comment %} <div class="container mt-3">
-  <form action="" method="get">
-      <input name="query" value="{{ request.GET.query }}" type="text">
-      <button type="submit">検索</button>
-  </form>
-</div> {% endcomment %}
-<body>
+{% extends 'app/base.html' %}
+{% block content %}
     <div class="container mt-3" id="schedules">
         <div class = "container mt-3">
-        <input class="search p-3 flex-1" placeholder="Search" />
+          <input type="button" onclick="location.href='{% url 'mycalendar' %}'" value="戻る">
         </div>
         <div class = "container mt-3">
-        <table class = "table table-striped table table-bordered">
-            <thead>
+          <input class="search p-3 flex-1" placeholder="Search" />
+        </div>
+        <div class = "container mt-3">
+         <table class = "table table-striped table table-bordered">
+           <thead>
+              <tr>
+                <th class="sort" data-sort='date'>日付</th>
+                <th class="summary">概要</th>
+                <th class="description">説明</th>
+                <th class="start_time">開始時間</th>
+                <th class="end_time">終了時間</th>
+                <th class="room">勉強部屋</th>
+                <th class="creator">作成者</th>
+              </tr>
+           </thead>
+           <tbody class="list">
+              {% for schedule in object_list %}
                 <tr>
-                    <th class="sort" data-sort='date'>日付</th>                    
-                    <th class="summary">概要</th>                    
-                    <th class="description">説明</th>
-                    <th class="start_time">開始時間</th>
-                    <th class="end_time">終了時間</th>
-                    <th class="room">勉強部屋</th>
+                  <td class="date"><a href="{% url 'mycalendar' schedule.date.year schedule.date.month schedule.date.day %}">{{ schedule.date|date:"Y年m月d日" }}</a></td>
+                  <td class="summary">{{ schedule.summary }}</td>
+                  <td class="description">{{ schedule.description }}</td>
+                  <td class="start_time">{{ schedule.start_time|date:"G:i" }}</td>
+                  <td class="end_time">{{ schedule.end_time|date:"G:i" }}</td>
+                  <td class="room">{{ schedule.room }}</td>
+                  <td class="creator">{{ schedule.creator }}</td>
                 </tr>
-            </thead>
-            <tbody class="list">
-            {% for schedule in object_list %}
-            <tr>
-                <td class="date"><a href="{% url 'mycalendar' schedule.date.year schedule.date.month schedule.date.day %}">{{ schedule.date|date:"Y年m月d日" }}</a></td>
-                <td class="summary">{{ schedule.summary }}</td>
-                <td class="description">{{ schedule.description }}</td>
-                <td class="start_time">{{ schedule.start_time|date:"G:i" }}</td>
-                <td class="end_time">{{ schedule.end_time|date:"G:i" }}</td>
-                <td class="room">{{ schedule.room }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-        </table> 
+              {% endfor %}
+            </tbody>
+          </table> 
         </div>
     </div>
-</body> 
-</html>
+    <style> 
+      .sort.desc:after {
+        content: "▼";
+      }
+     
+      .sort.asc:after {
+        content: "▲";
+      }
+    </style>
+{% endblock %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
- 
+{% block extrajs %}
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script> 
 <script>
 var options = {
   valueNames: [ 'date', 'summary', 'description', 'start_time', 'end_time', 'room' ]
-};
- 
+}; 
 var scheduleList = new List('schedules', options);
-
-scheduleList.sort( 'id', {order : 'desc' });
+scheduleList.sort( 'date', {order : 'desc' });
 </script>
+{% endblock %}
