作成者名で検索ができるように／デバッグ用のprint()が残っていたのを削除

--- a/app/templates/app/schedule_list.html
+++ b/app/templates/app/schedule_list.html
@@ -54,7 +54,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script> 
 <script>
 var options = {
-  valueNames: [ 'date', 'summary', 'description', 'start_time', 'end_time', 'room' ]
+  valueNames: [ 'date', 'summary', 'description', 'start_time', 'end_time', 'room', 'creator' ]
 }; 
 var scheduleList = new List('schedules', options);
 scheduleList.sort( 'date', {order : 'desc' });
