--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -12,19 +12,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <title>カレンダー</title>
+    <title>{% block title %}シケタイ{% endblock title %}</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href={% url 'mycalendar' %}>カレンダー</a>
+            <a class="navbar-brand" href={% url 'index' %}>シケタイ</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href={% url 'index' %}>シケタイへ戻る</a>
+                  <a class="nav-link" aria-current="page" href={% url 'mycalendar' %}>カレンダー</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="https://discord.gg/UhVZwKys2H">Discord</a>
