--- a/app/templates/app/join.html
+++ b/app/templates/app/join.html
@@ -1,4 +1,5 @@
 {% extends 'app/base.html' %}
+{% block title %}{{ schedule.summary }} | {{ block.super }}{% endblock title %}
 {% block content %}
     <div class="container mt-3">
         <h1>勉強会に参加</h1>
