change tutorial image 2

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -34,8 +34,8 @@
                     ヘルプ
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="https://cdn.discordapp.com/attachments/864711400655945759/920547797147713537/Screen_Shot_2021-12-15_at_14.27.12.png" data-lightbox="group">主催者の方へ</a></li>
-                    <li><a class="dropdown-item" href="https://cdn.discordapp.com/attachments/864711400655945759/920547796791205958/Screen_Shot_2021-12-15_at_14.26.58.png" data-lightbox="group">参加者の方へ</a></li>
+                    <li><a class="dropdown-item" href="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_renewed_1.png" data-lightbox="group">主催者の方へ</a></li>
+                    <li><a class="dropdown-item" href="https://raw.githubusercontent.com/enpitut2021/hanashiainokai_registration/main/app/templates/app/images/tutorial_renewed_2.png" data-lightbox="group">参加者の方へ</a></li>
                   </ul>
                 </li>            
               </ul>
